--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:19.1.0'
     compile files('libs/Parse-1.4.0.jar')
+    compile group: 'com.rabbitmq', name: 'amqp-client', version: '3.6.5'
 }
